hack/tilt/k8s/dev-holos-infra/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: holos
  name: holos
  namespace: istio-gateways
spec:
  hostnames:
  - app.holos.localhost
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default
    namespace: istio-gateways
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: holos
      namespace: dev-holos
      port: 3000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
